shom.css
.page_shom { background: transparent url(bg_body.jpg) left top repeat; }
.page_shom .page { width: 840px; }
.page_shom .main { margin-top: 2em; }
.page_shom .source { text-align: center; }
.page_shom .source a { text-decoration: none; color: #777; font-size: 0.85em; }
.page_shom .card,
.page_shom .options { font-family: Verdana,Geneva,sans-serif; }
.page_shom .card a,
.page_shom .options a { text-decoration: none; }
.page_shom .options { margin-bottom: 1.5em; }
.page_shom .options form { display: inline; }
.page_shom .card .logo { display: block; margin: 1em auto; }
.page_shom .card .description { margin-bottom: 0; text-align: left; }
.page_shom .card .description dt,
.page_shom .card .description dd { display: block; float: left; width: 28%; margin: 0; }
.page_shom .card .description dt { color: #666; }
.page_shom .card .description dd { width: 72%; word-wrap: break-word; }
.page_shom .vignettes .item { margin-bottom: 2em; text-align: center; }
.page_shom .vignettes .item.plie .description { display: none; }
.page_shom #colorbox .sep,
.page_shom #colorbox .toggle { display: none; }
.page_shom .fiches .item { margin-bottom: 2em; padding: 0.5em; background: #f5f5f5; box-shadow: 0 1px 2px rgba(100, 100, 100, 0.3); }
.page_shom #map { height: 550px; }

@media (max-width: 1032px) {
	.page_shom body { width: 100%; padding: 0; }
	.page_shom .page { width: auto; max-width: none; padding: 1em; margin: 0; }
}
/* ... */

